--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: StatsTLF
 Type: Package
 Title: Statistics Tables, Listings and Figures
-Version: 1.3.0
+Version: 1.4.0
 Author: Pedro Henrique Theotonio de Mesquita Pacheco
 Maintainer: Pedro Henrique Theotonio de Mesquita Pacheco <pedrohmp36@gmail.com>
 Description: The StatsTLF is an R package that helps automatically create tables, listings and figures for statistical reports.
@@ -12,10 +12,12 @@ LazyData: true
 RoxygenNote: 7.3.2
 Imports: 
     car,
+    digest,
     dplyr,
     flextable,
     ggplot2,
     here,
+    logrx,
     magick,
     methods,
     officer,
