--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(add_to_package)
 export(build_submission)
+export(create_adam_dataset)
 export(create_backbone_structure)
 export(create_content)
 export(create_content_backbone)
@@ -11,7 +12,9 @@ export(create_project)
 export(export_package)
 export(fig_display)
 export(run_caller_contents)
+export(simulate_adam_dataset)
 export(source_backbones)
+export(validate_adam_dataset)
 export(validate_hash)
 
 importFrom(methods,new)
