Fix valide adam and create set attr, add add_toc to export

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(create_project)
 export(export_package)
 export(fig_display)
 export(run_caller_contents)
+export(set_adam_attr)
 export(simulate_adam_dataset)
 export(source_backbones)
 export(validate_adam_dataset)
