Add derive functions and fix minor problems.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(create_content_backbone)
 export(create_content_package)
 export(create_package_structure)
 export(create_project)
+export(derive)
+export(derive_expr)
 export(export_package)
 export(fig_display)
 export(run_caller_contents)
