--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: StatsTLF
 Type: Package
 Title: Statistics Tables, Listings and Figures
-Version: 2.2.0
+Version: 2.3.0
 Author: Pedro Henrique Theotonio de Mesquita Pacheco
 Maintainer: Pedro Henrique Theotonio de Mesquita Pacheco <pedrohmp36@gmail.com>
 Description: The StatsTLF is an R package that helps automatically create tables, listings and figures for statistical reports.
@@ -23,7 +23,9 @@ Imports:
     officer,
     purrr,
     readr,
+    rlang,
     statebins,
+    stats,
     stringi,
     stringr,
     tcltk,
