Add derive2, improve derive and other features.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(create_content_package)
 export(create_package_structure)
 export(create_project)
 export(derive)
+export(derive2)
 export(derive_expr)
 export(export_package)
 export(fig_display)
