--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: StatsTLF
 Type: Package
 Title: Statistics Tables, Listings and Figures
-Version: 2.3.0
+Version: 2.4.0
 Author: Pedro Henrique Theotonio de Mesquita Pacheco
 Maintainer: Pedro Henrique Theotonio de Mesquita Pacheco <pedrohmp36@gmail.com>
 Description: The StatsTLF is an R package that helps automatically create tables, listings and figures for statistical reports.
@@ -17,6 +17,7 @@ Imports:
     flextable,
     ggplot2,
     here,
+    hms,
     logrx,
     magick,
     methods,
