Add describe function, mockup, and convert define to html.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,13 +11,17 @@ export(create_content_package)
 export(create_datasets_structure)
 export(create_project)
 export(create_report_structure)
+export(define_to_html)
 export(derive)
 export(derive2)
 export(derive_expr)
+export(describe)
 export(export_datasets)
 export(export_report)
 export(fig_display)
 export(gen_hash)
+export(mock_str)
+export(mockup)
 export(run_caller_contents)
 export(set_adam_attr)
 export(simulate_adam_dataset)
