--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: StatsTLF
 Type: Package
 Title: Statistics Tables, Listings and Figures
-Version: 3.3.0
+Version: 3.4.0
 Author: Pedro Henrique Theotonio de Mesquita Pacheco
 Maintainer: Pedro Henrique Theotonio de Mesquita Pacheco <pedrohmp36@gmail.com>
 Description: The StatsTLF is an R package that helps automatically create tables, listings and figures for statistical reports.
@@ -12,6 +12,7 @@ LazyData: true
 RoxygenNote: 7.3.2
 Imports: 
     car,
+    cli,
     digest,
     dplyr,
     flextable,
@@ -33,4 +34,6 @@ Imports:
     tcltk,
     tibble,
     tools,
+    xml2,
+    xslt,
     zip
